force-app/main/default/objects/GlobalParameter__mdt/GlobalParameter__mdt.object-meta.xml
<CustomObject>
    <label>Global Parameter</label>
    <pluralLabel>Global Parameters</pluralLabel>
</CustomObject>