force-app/main/default/objects/GlobalParameter__mdt/fields/AddExtraRT__c.field-meta.xml
<CustomField>
    <fullName>AddExtraRT__c</fullName>
    <label>Add Extra RT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>