force-app/main/default/objects/GlobalParameter__mdt/fields/BgnEndRouteTimeAtFacility__c.field-meta.xml
<CustomField>
    <fullName>BgnEndRouteTimeAtFacility__c</fullName>
    <label>Bgn End Route Time At Facility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>