force-app/main/default/objects/GlobalParameter__mdt/fields/EndLocation__c.field-meta.xml
<CustomField>
    <fullName>EndLocation__c</fullName>
    <label>End Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>