force-app/main/default/objects/GlobalParameter__mdt/fields/GenerateMethod__c.field-meta.xml
<CustomField>
    <fullName>GenerateMethod__c</fullName>
    <label>Generate Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>