force-app/main/default/objects/GlobalParameter__mdt/fields/InclRoutePrepTime__c.field-meta.xml
<CustomField>
    <fullName>InclRoutePrepTime__c</fullName>
    <label>Incl Route Prep Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>