force-app/main/default/objects/GlobalParameter__mdt/fields/IncludeMeanderPenalty__c.field-meta.xml
<CustomField>
    <fullName>IncludeMeanderPenalty__c</fullName>
    <label>Include Meander Penalty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>