force-app/main/default/objects/GlobalParameter__mdt/fields/LoopParkOpt__c.field-meta.xml
<CustomField>
    <fullName>LoopParkOpt__c</fullName>
    <label>Loop Park Opt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>