force-app/main/default/objects/GlobalParameter__mdt/fields/MaxLoopDemand__c.field-meta.xml
<CustomField>
    <fullName>MaxLoopDemand__c</fullName>
    <label>Max Loop Demand</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>