force-app/main/default/objects/GlobalParameter__mdt/fields/MaxLoopTime__c.field-meta.xml
<CustomField>
    <fullName>MaxLoopTime__c</fullName>
    <label>Max Loop Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>