force-app/main/default/objects/GlobalParameter__mdt/fields/MaxRouteTime__c.field-meta.xml
<CustomField>
    <fullName>MaxRouteTime__c</fullName>
    <label>Max Route Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>