force-app/main/default/objects/GlobalParameter__mdt/fields/MixedMode__c.field-meta.xml
<CustomField>
    <fullName>MixedMode__c</fullName>
    <label>Mixed Mode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>