force-app/main/default/objects/GlobalParameter__mdt/fields/NumberOfRoutes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRoutes__c</fullName>
    <label>Number Of Routes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>