force-app/main/default/objects/GlobalParameter__mdt/fields/NumDemandFields__c.field-meta.xml
<CustomField>
    <fullName>NumDemandFields__c</fullName>
    <label>Num Demand Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>