force-app/main/default/objects/GlobalParameter__mdt/fields/ParkAndLoop__c.field-meta.xml
<CustomField>
    <fullName>ParkAndLoop__c</fullName>
    <label>Park And Loop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>