force-app/main/default/objects/GlobalParameter__mdt/fields/PickupCapacityPercentage__c.field-meta.xml
<CustomField>
    <fullName>PickupCapacityPercentage__c</fullName>
    <label>Pickup Capacity Percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>