force-app/main/default/objects/GlobalParameter__mdt/fields/PickupDeliveryNumStacked__c.field-meta.xml
<CustomField>
    <fullName>PickupDeliveryNumStacked__c</fullName>
    <label>Pickup Delivery Num Stacked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>