force-app/main/default/objects/GlobalParameter__mdt/fields/PostEndTime__c.field-meta.xml
<CustomField>
    <fullName>PostEndTime__c</fullName>
    <label>Post End Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>