force-app/main/default/objects/GlobalParameter__mdt/fields/PreStartTime__c.field-meta.xml
<CustomField>
    <fullName>PreStartTime__c</fullName>
    <label>Pre Start Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>