force-app/main/default/objects/GlobalParameter__mdt/fields/RouteNumberIncr__c.field-meta.xml
<CustomField>
    <fullName>RouteNumberIncr__c</fullName>
    <label>Route Number Incr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>