force-app/main/default/objects/GlobalParameter__mdt/fields/SeqGap__c.field-meta.xml
<CustomField>
    <fullName>SeqGap__c</fullName>
    <label>Seq Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>