force-app/main/default/objects/GlobalParameter__mdt/fields/SeqStart__c.field-meta.xml
<CustomField>
    <fullName>SeqStart__c</fullName>
    <label>Seq Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>