force-app/main/default/objects/GlobalParameter__mdt/fields/Sol_Label__c.field-meta.xml
<CustomField>
    <fullName>Sol_Label__c</fullName>
    <label>Sol Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>