force-app/main/default/objects/GlobalParameter__mdt/fields/SolName__c.field-meta.xml
<CustomField>
    <fullName>SolName__c</fullName>
    <label>Sol Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>