force-app/main/default/objects/GlobalParameter__mdt/fields/Solver__c.field-meta.xml
<CustomField>
    <fullName>Solver__c</fullName>
    <label>Solver</label>
    <length>50</length>
    <type>Text</type>
</CustomField>