force-app/main/default/objects/GlobalParameter__mdt/fields/StartLocation__c.field-meta.xml
<CustomField>
    <fullName>StartLocation__c</fullName>
    <label>Start Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>