force-app/main/default/objects/GlobalParameter__mdt/fields/StartRouteNumber__c.field-meta.xml
<CustomField>
    <fullName>StartRouteNumber__c</fullName>
    <label>Start Route Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>