force-app/main/default/objects/GlobalParameter__mdt/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>