force-app/main/default/objects/GlobalParameter__mdt/fields/TargetTime__c.field-meta.xml
<CustomField>
    <fullName>TargetTime__c</fullName>
    <label>Target Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>