force-app/main/default/objects/GlobalParameter__mdt/fields/UseBlockSeq__c.field-meta.xml
<CustomField>
    <fullName>UseBlockSeq__c</fullName>
    <label>Use Block Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>