force-app/main/default/objects/GlobalParameter__mdt/fields/UseBuilding__c.field-meta.xml
<CustomField>
    <fullName>UseBuilding__c</fullName>
    <label>Use Building</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>