force-app/main/default/objects/GlobalParameter__mdt/fields/UseExtraDistance__c.field-meta.xml
<CustomField>
    <fullName>UseExtraDistance__c</fullName>
    <label>Use Extra Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>