force-app/main/default/objects/GlobalParameter__mdt/fields/UseExtraTime__c.field-meta.xml
<CustomField>
    <fullName>UseExtraTime__c</fullName>
    <label>Use Extra Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>