force-app/main/default/objects/GlobalParameter__mdt/fields/UseFixedUnitSeq__c.field-meta.xml
<CustomField>
    <fullName>UseFixedUnitSeq__c</fullName>
    <label>Use Fixed Unit Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>