force-app/main/default/objects/GlobalParameter__mdt/fields/UsePickupDeliveryCapacity__c.field-meta.xml
<CustomField>
    <fullName>UsePickupDeliveryCapacity__c</fullName>
    <label>Use Pickup Delivery Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>