force-app/main/default/objects/GlobalParameter__mdt/fields/UsePrepTime__c.field-meta.xml
<CustomField>
    <fullName>UsePrepTime__c</fullName>
    <label>Use Prep Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>