force-app/main/default/objects/GlobalParameter__mdt/fields/UseRegions__c.field-meta.xml
<CustomField>
    <fullName>UseRegions__c</fullName>
    <label>Use Regions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>