force-app/main/default/objects/GlobalParameter__mdt/fields/UseSectors__c.field-meta.xml
<CustomField>
    <fullName>UseSectors__c</fullName>
    <label>Use Sectors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>