force-app/main/default/objects/GlobalParameter__mdt/fields/UseSpecialties__c.field-meta.xml
<CustomField>
    <fullName>UseSpecialties__c</fullName>
    <label>Use Specialties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>