force-app/main/default/objects/GlobalParameter__mdt/fields/UseZonePriority__c.field-meta.xml
<CustomField>
    <fullName>UseZonePriority__c</fullName>
    <label>Use Zone Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>